Lecturas del 18-May-21

--- a/README.org
+++ b/README.org
@@ -20,6 +20,11 @@ contenido.
 
 ** Mayo de 2021
 
+*** 18-May-21
++ [[https://arxiv.org/abs/2105.05133][Formally verified simulations of state-rich processes using interaction trees in Isabelle/HOL]]. ~ Simon Foster, Chung-Kil Hur, Jim Woodcock. #ITP #IsabelleHOL
++ [[https://www.mat.unb.br/~ayala/Formalization_of_Ring_TheoryR1.pdf][Formalization of ring theory in PVS (Isomorphism theorems, principal, prime and maximal ideals, chinese remainder theorem)]]. ~ Thaynara Arielly de Lima et als. #ITP #PVS #Math
++ [[https://lmcs.episciences.org/7478/pdf][Computable analysis and notions of continuity in Coq]]. ~ H. Thies, L. Thery, F. Steinberg. #ITP #Coq #Math
+
 *** 17-May-21
 + [[https://github.com/leanprover-community/mathlib/blob/9084a3c765f7177d6466c72563998b9f48cf8e81/src/order/fixed_points.lean][Fixed point construction on complete lattices]]. ~ Johannes Hölzl et als. #ITP #LeanProver #Math
 
